# Serpent-Project

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Defines.h  Key_Generation.c  Mathematicals.c  MyGTKApp.sln  MyGTKApp.vcxproj  MyGTKApp.vcxproj.filters  Sbox.h  Utils.c  Wserpent.c  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.c  serpent.c  serpent.h  serpent_defs.h  serpent_functions.h  tempCodeRunnerFile.c
GraphEnc/: CMakeLists.txt  cmake_install.cmake  graphDec.c  graphEnc.c  graphEnc.vcxproj  graphEnc.vcxproj.filters  graphEncDec.c  graphEncr.c  graphUtils.c  graphs.c  graphs.h
headers/: Sbox.h  graphs.h  gui.h  serpent_defs.h  serpent_functions.h
serpentEnc/: CMakeLists.txt  cmake_install.cmake  keyGeneration.c  mathematicals.c  serpent.c  serpentEnc.vcxproj  serpentEnc.vcxproj.filters  utils.c
src/: gui.c  main.c
